# hamming_code

./: CMakeLists.txt  client.cpp  hamming_code.h  hamming_code_word_size.h  server.cpp  test_hamming_code.cpp
